# iot-venture-f25-spam

./: .gitignore  CMakeLists.txt  README.md  index.html  prj.conf  sysbuild.conf  upper_body.glb  west.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  zephyr-ci.yml
boards/: nrf7002dk_nrf5340_cpuapp.overlay
dts/bindings/: pwm-servo.yaml
peripheral_nus/: prj.conf
src/: main.c
subroutines/FOTA/: CMakeLists.txt  private_key.pem  prj.conf  sysbuild.conf
subroutines/FOTA/src/: FOTA.c  FOTA.h  main.c
subroutines/Motion_sensor/: CMakeLists.txt  prj.conf
subroutines/Motion_sensor/boards/: nrf7002dk_nrf5340_cpuapp.overlay
subroutines/Motion_sensor/src/: imu.c  imu.h  madgwick.c  madgwick.h  madgwick_motion.c  madgwick_motion.h  main.c
subroutines/Motion_sensor/tests/MOTION_SENSOR_TEST/: CMakeLists.txt  prj.conf  testcase.yaml
subroutines/Motion_sensor/tests/MOTION_SENSOR_TEST/src/: main.c
subroutines/ble_nus/: CMakeLists.txt  pm_static.yml  prj.conf  sysbuild.conf
subroutines/ble_nus/boards/: nrf7002dk_nrf5340_cpuapp.overlay
subroutines/ble_nus/src/: ble_nus.c  ble_nus.h  main.c
subroutines/ble_nus/sysbuild/: hci_ipc.conf
subroutines/peripheral_mds/: CMakeLists.txt  prj.conf
subroutines/peripheral_mds/boards/: nrf7002dk_nrf5340_cpuapp.overlay
subroutines/peripheral_mds/src/: main.c  mds.c  mds.h
subroutines/peripheral_nus/src/: main.c
subroutines/pressure_sensor/: CMakeLists.txt
subroutines/pressure_sensor/src/: adc_demo.c  adc_demo.h  main.c
subroutines/pressure_sensor/tests/PRESSURE_SENSOR_TEST/: CMakeLists.txt  testcase.yaml
subroutines/pressure_sensor/tests/PRESSURE_SENSOR_TEST/src/: main.c
subroutines/servo/: CMakeLists.txt  README.md  prj.conf
subroutines/servo/boards/: nrf7002dk_nrf5340_cpuapp.overlay
subroutines/servo/src/: main.c  servo.c  servo.h  servo_logic.c  servo_logic.h
subroutines/servo/tests/SERVO_UNIT_TEST/: CMakeLists.txt  testcase.yaml
subroutines/servo/tests/SERVO_UNIT_TEST/src/: main.c
